finish add attribute component; fix modal dropdown overflow;

--- a/resources/sass/_modal.scss
+++ b/resources/sass/_modal.scss
@@ -12,6 +12,10 @@
     overflow-y: auto;
 }
 
+.modal-body.nonscrollable {
+    overflow-y: initial !important;
+}
+
 .sp-modal-content {
     @extend .modal-content;
     max-height: 80vh;
